plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/multiTargetIndependentProject/libOne/src/jvmMain/kotlin/JvmSpecific.kt
actual fun <!LINE_MARKER("descr='Has expects in multiTargetIndependentProject.libOne.commonMain module'")!>writeLogMessage<!>(message: String) {
    println("JVM LOG: $message")
}
